trying to fix ascii on mobile

--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ a:visited {
     /*font-family: 'monospace';/*  Typically ASCII art looks best in monospace */
     /* font-family: 'Vulf Mono Light Italic', */
     font-family: 'Light Italic';
-    color: white;
+    color: black;
     font-size: 8px;
     line-height: 12px; 
 
@@ -155,8 +155,8 @@ a:visited {
  #ascii-top-left {
     position: absolute;
     left: 50%; /* Start from the center */
-    transform: translateX(-340px); /* Move to the right from the center */
-    top: 280px; /* Adjust if you want to change the vertical position */
+    transform: translateX(calc((-340 / 1150) * 100vw)); /* Move to the right from the center */
+    top: 25vw; /* Adjust if you want to change the vertical position */
 
   }
 
@@ -164,27 +164,28 @@ a:visited {
   #ascii-top-right {
     position: absolute;
     left: 50%; /* Start from the center */
-    transform: translateX(140px); /* Move to the right from the center */
-    top: 80px; /* Adjust if you want to change the vertical position */
+    transform: translateX(calc((140 / 1150) * 100vw)); /* Move to the right from the center */
+    top: 7vw; /* Adjust if you want to change the vertical position */
+    font-family: 'Light Italic';
 
   }
 
   #ascii-middle {
     text-align: center;
     position: relative; /* relative to its normal position */
-    left: 44px; /* adjust the value to push it to the left */
+    left: calc((44 / 1150) * 100vw); /* adjust the value to push it to the left */
   }
 
   /* Bottom-left element */
   #ascii-bottom-left {
     position: absolute;
     left: 50%; /* Start by centering the element */
-    transform: translateX(calc(-50% - 430px)) translateY(-40px); /* Then shift it 100px to the left from the center */
+    transform: translateX(calc(-50% - 35.7vw)) translateY(-3vw); /* Then shift it 100px to the left from the center */
   }
 
   /* Bottom-right element */
   #ascii-bottom-right {
     position: absolute;
     left: 50%; /* Start by centering the element */
-    transform: translateX(calc(-50% + 290px)) translateY(-70px); /* Then shift it 100px to the left from the center */
+    transform: translateX(calc(-50% + 26vw)) translateY(-6vw); /* Then shift it 100px to the left from the center */
   }
